Kubernetes/clientes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: clientes
  name: clientes
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: clientes
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker_compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/taller-api: "true"
        io.kompose.service: clientes
    spec:
      containers:
        - image: jmenesesf/aos-develop:latest
          name: clientes
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
