Kubernetes/notificaciones-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notificaciones
  name: notificaciones
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notificaciones
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker_compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/taller-api: "true"
        io.kompose.service: notificaciones
    spec:
      containers:
        - image: enriquer47/api_notificaciones:0.0.1
          name: notificaciones-service
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
