Kubernetes/recambios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: recambios
  name: recambios
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: recambios
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker_compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/taller-api: "true"
        io.kompose.service: recambios
    spec:
      containers:
        - image: ghcr.io/adrianja5/aos-implementacion-servicio-recambios
          name: recambios
          ports:
            - containerPort: 4010
          resources: {}
      restartPolicy: Always
status: {}
