Kubernetes/trabajos-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: trabajos-backend
  name: trabajos-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trabajos-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker_compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: trabajos-backend
    spec:
      containers:
        - args:
            - mock
            - --cors
            - -h
            - 0.0.0.0
            - /aos/swagger.yaml
          image: stoplight/prism:4
          name: trabajos-backend
          ports:
            - containerPort: 4010
          resources: {}
      restartPolicy: Always
status: {}
