Kubernetes/vehiculos-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos-frontend
  name: vehiculos-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vehiculos-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker_compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: vehiculos-frontend
    spec:
      containers:
        - env:
            - name: SWAGGER_JSON
              value: /aos/openapi.yaml
          image: swaggerapi/swagger-ui:latest
          name: vehicles-ui
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
