Kubernetes/logs-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: logs-backend
  name: logs-backend
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 4010
  selector:
    io.kompose.service: logs-backend
status:
  loadBalancer: {}
