Kubernetes/logs-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: logs-frontend
  name: logs-frontend
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8080
  selector:
    io.kompose.service: logs-frontend
status:
  loadBalancer: {}
