Kubernetes/notificaciones-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notificaciones
  name: notificaciones
spec:
  ports:
    - name: "7777"
      port: 7777
      targetPort: 5000
  selector:
    io.kompose.service: notificaciones
status:
  loadBalancer: {}
