Kubernetes/recambios-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: recambios
  name: recambios
spec:
  ports:
    - name: "8095"
      port: 8095
      targetPort: 4010
  selector:
    io.kompose.service: recambios
status:
  loadBalancer: {}
