Kubernetes/trabajos-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: trabajos-backend
  name: trabajos-backend
spec:
  ports:
    - name: "8091"
      port: 8091
      targetPort: 4010
  selector:
    io.kompose.service: trabajos-backend
status:
  loadBalancer: {}
