Kubernetes/vehiculos-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos-backend
  name: vehiculos-backend
spec:
  ports:
    - name: "4016"
      port: 4016
      targetPort: 4010
  selector:
    io.kompose.service: vehiculos-backend
status:
  loadBalancer: {}
