Kubernetes/vehiculos-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker_compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos-frontend
  name: vehiculos-frontend
spec:
  ports:
    - name: "8006"
      port: 8006
      targetPort: 8080
  selector:
    io.kompose.service: vehiculos-frontend
status:
  loadBalancer: {}
