Kubernetes/taller-api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: taller-api
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/taller-api: "true"
  podSelector:
    matchLabels:
      io.kompose.network/taller-api: "true"
